--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,8 @@ name: wavepy2
 channels:
   - conda-forge
 dependencies:
-  - python=3.6
+  - python=3.11
   - numba
   - numpy
   - matplotlib
-  - jupyterlab=2
+  - jupyterlab
