--- a/environment.yml
+++ b/environment.yml
@@ -3,10 +3,8 @@ channels:
   - conda-forge
 dependencies:
   - python=3.10
-  - ipympl
-  - numba
-  - mamba
+  - ipympl=0.9.*
+  - matplotlib=3.7.*
   - numpy
-  - matplotlib
+  - numba
   - jupyterlab
-  - notebook
